--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
