--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.1.0"
+    "react-native-sfsymbols": "^1.2.1",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
