--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~50.0.14",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-native-sfsymbols": "^1.2.1",
-    "react-native-svg": "^15.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
