--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.7",
@@ -22,14 +24,17 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.31.1",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-svg": "15.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-navigation-stack": "react-navigation/stack"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
