--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/analytics": "^20.0.0",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/auth": "^20.0.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -19,11 +23,13 @@
     "expo": "~51.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
