--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/osascript": "^2.1.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/analytics": "^20.0.0",
@@ -41,7 +42,12 @@
     "react-native-sfsymbols": "^1.2.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-navigation-stack": "react-navigation/stack"
+    "react-navigation-stack": "react-navigation/stack",
+    "whatwg-url": "^14.0.0"
+  },
+  "resolutions": {
+    "whatwg-url": "^14.0.0",
+    "whatwg-url-without-unicode": "8.0.0-3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
