--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/analytics": "^20.0.0",
     "@react-native-firebase/app": "^20.0.0",
@@ -20,12 +20,14 @@
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~51.0.7",
+    "expo": "~51.0.39",
+    "expo-apple-authentication": "^6.4.2",
+    "expo-auth-session": "^5.5.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.0",
+    "firebase": "^11.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
@@ -33,8 +35,8 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.11.0",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.31.1",
     "react-native-sfsymbols": "^1.2.1",
@@ -43,7 +45,8 @@
     "react-navigation-stack": "react-navigation/stack"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
